# spec/api.yaml
@@ -274,6 +274,28 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
 
+  /spaces/space/{spaceId}/payment/wallet:
+    parameters:
+      - $ref: "#/components/parameters/AuthToken"
+      - $ref: "#/components/parameters/SpaceID"
+    get:
+      tags:
+        - space
+        - wallet
+        - payment
+      operationId: getWalletDetails
+      responses:
+        "200":
+          description: "success"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Wallet"
+
+
+
+
+
 
 
 
@@ -492,6 +514,21 @@ components:
           type: string
         amount:
           type: number
+
+    Wallet:
+      type: object
+      properties:
+        id:
+          type: string
+        space:
+          type: string
+        available_balance:
+          type: number
+        pending_balance:
+          type: number
+        lock_withdrawals:
+          type: number
+
 
 
 
