# src/controllers/index.ts
@@ -1,4 +1,5 @@
 export * from "./triangleController";
 export * from "./auth.controller";
 export * from "./space.controller";
-export * from "./space.controller";
+export * from "./payment.controller";
+export * from "./user.controller";
